infra/instanciaAtacante.tf
resource "aws_instance" "attackingServer" {
  ami           = "ami-03f6bd5a7e1b5824e"
  instance_type = "t4g.micro"
  key_name      = aws_key_pair.chave_ssh.key_name
  subnet_id     = aws_subnet.bancoApi.id
  
  vpc_security_group_ids = [aws_security_group.firewall_attackingServer.id]
  
  # Configurar o volume root com 20GB
  root_block_device {
    volume_type = "gp3"
    volume_size = 20
    encrypted   = true
  }

  tags = {
    Name = var.default_tag
  }
}

resource "aws_eip" "attackingServer" {
  instance = aws_instance.attackingServer.id
  
  tags = {
    Name = var.default_tag
  }
}

output "public_ip_attackingServer" {
  value = aws_eip.attackingServer.public_ip
}

output "private_ip_attackingServer" {
  value = aws_instance.attackingServer.private_ip
}

output "ssh_command_attackingServer" {
  value = "ssh -i ${var.ssh_key_path} ubuntu@${aws_eip.attackingServer.public_ip}"
}
