infra/instanciaAtacanteSecurtiyGroup.tf
resource "aws_security_group" "firewall_attackingServer" {
  name        = "firewall_attackingServer"
  description = "Security group para o servidor atacante"
  vpc_id      = aws_vpc.vpc.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = var.default_tag
  }
}
